--- a/final/package.json
+++ b/final/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "start": " node index.js"
   },
   "engines": {
     "node": "13.x",
@@ -13,3 +13,4 @@
   "author": "me",
   "license": "ISC"
 }
+ 
